Bug 71527 - Crash when starting a slideshow
Summary: Crash when starting a slideshow
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Thorsten Behrens (allotropia)
URL:
Whiteboard: target:4.2.0 target:4.3.0
Keywords:
: 72236 (view as bug list)
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2013-11-12 09:57 UTC by sophie
Modified: 2015-03-03 06:03 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
sample to reproduce the bug (11.29 KB, application/vnd.oasis.opendocument.presentation)
2013-11-12 09:57 UTC, sophie
Details
bt of the crash (3.34 KB, text/plain)
2013-11-18 15:07 UTC, sophie
Details
Backtrace (4.94 KB, text/plain)
2013-11-18 15:22 UTC, Arnaud Versini
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sophie 2013-11-12 09:57:18 UTC
Created attachment 89075 [details]
sample to reproduce the bug

Whenever hitting F5 or choosing Slide Show > Start from this slide, LibreOffice crashes.
Step to reproduce:
- open the attach test document
- hit F5
Opening a document that contains only one slide doesn't seems to crash. Nothing from the terminal during the crash. 
Version: 4.2.0.0.alpha1+
Build ID: 518f404db780939e3f1d96300ebeeb1faaad6838
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2013-11-07_00:43:33
Sophie
Comment 1 Julien Nabet 2013-11-12 18:51:47 UTC
Comment on attachment 89075 [details]
sample to reproduce the bug

Mimetype fixed
Comment 2 Julien Nabet 2013-11-12 21:01:10 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce the crash.
Certainly you already tried but I prefer to ask:
did you try to rename your LO directory profile (see https://wiki.documentfoundation.org/UserProfile)?

Would it be possible to retrieve a backtrace (even if there are no symbols) by following this link:
https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#GNU.2FLinux:_How_to_get_a_backtrace
?
Comment 3 retired 2013-11-16 17:46:17 UTC
WORKSFORME on Ubuntu 13.10 and LO Version: 4.2.0.0.alpha1+
Build ID: 9ab89a7599f79092027ae86b5b4cd0e3d67b8b4d
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2013-11-16_01:53:07

No crash and presentations runs fine. Sophie if you can still reproduce this with the latest nightly build please re-open.
Comment 4 sophie 2013-11-18 15:06:45 UTC
(In reply to comment #2)
> On pc Debian x86-64 with master sources updated today, I don't reproduce the
> crash.
> Certainly you already tried but I prefer to ask:
> did you try to rename your LO directory profile (see
> https://wiki.documentfoundation.org/UserProfile)?

yes, it's a clean install I reproduced today
> 
> Would it be possible to retrieve a backtrace (even if there are no symbols)
> by following this link:
> https://wiki.documentfoundation.org/QA/BugReport/Debug_Information#GNU.
> 2FLinux:_How_to_get_a_backtrace
> ?
I attach the bt I get using 
Version: 4.2.0.0.alpha1+
Build ID: f99736820a23cb7e37139607713658dea1c69dd4
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2013-11-17_23:56:22
Comment 5 sophie 2013-11-18 15:07:25 UTC
Created attachment 89410 [details]
bt of the crash
Comment 6 Arnaud Versini 2013-11-18 15:22:20 UTC
Created attachment 89411 [details]
Backtrace
Comment 7 Arnaud Versini 2013-11-18 15:28:48 UTC
Happen only with two screen on my machine. OpenSuse 13.1 64 bits on Gnome.

Tested on master 9c45345a680f7444df251f9403c7d56572380f21.
Comment 8 Julien Nabet 2013-11-18 21:53:44 UTC
Thank you Sophie and Arnaud for your feedback.
I put it at NEW since we got 2 bts.

Sophie: just for information, do you also have 2 screens on your machine?

Caolán/Thorsten: I put you in cc since we can see vcl+sd/sdext inside bts.
I noticed this in one of the bt:
#1  0x00007fffd586440d in non-virtual thunk to sd::presenter::SlideRenderer::createPreviewForCanvas(com::sun::star::uno::Reference<com::sun::star::drawing::XDrawPage> const&, com::sun::star::awt::Size const&, short, com::sun::star::uno::Reference<com::sun::star::rendering::XCanvas> const&) (this=<optimized out>, rxSlide=uno::Reference to (cppcanvas::internal::ImplBitmapCanvas *) 0x29a42a0, rMaximalSize=..., nSuperSampleFactor=-22480, 
    rxCanvas=<error reading variable: Cannot access memory at address 0x13>) at /home/arnaud/libreoffice/src/sd/source/ui/presenter/SlideRenderer.cxx:142


Also I don't think it's related but just in case, cppcheck reported this:
[PresenterController.cxx:397] -> [PresenterController.cxx:401]: (performance) Variable 'nIndex' is reassigned a value before the old one has been used

Indeed we have:
    396                 // Get the placeholder
    397                 ++nIndex;
    398                 ++nStartIndex;
    399                 const sal_Int32 nEndIndex (sTemplate.indexOf('%', nStartIndex+1));
    400                 const OUString sPlaceholder (sTemplate.copy(nStartIndex, nEndIndex-nStartIndex));
    401                 nIndex = nEndIndex+1;

See http://opengrok.libreoffice.org/xref/core/sdext/source/presenter/PresenterController.cxx#396
Comment 9 Commit Notification 2013-11-20 09:36:34 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bae01385c895a100b5371879889e606927cff877

Resolves: fdo#71527 don't crash in presenter console



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Caolán McNamara 2013-11-20 10:11:14 UTC
That gets rid of the crash, but the presenter console is still visually busted.
Comment 11 Thorsten Behrens (allotropia) 2013-11-28 13:35:53 UTC
let me have a closer look tonight.
Comment 12 Commit Notification 2013-11-28 17:03:58 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=639aa8e72639fd01e9004977f1cfaafc13b1e45f

Resolves: fdo#71527 make presenter console not crash/useless



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2013-11-29 17:29:30 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=72aa51185fb7b1ff2ad9006f2067a680b70ab66d

Revert "Resolves: fdo#71527 make presenter console not crash/useless"



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2013-11-29 17:29:48 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b807b2d9291a2328a55de55d67c4874803d8b7fd

Revert "Resolves: fdo#71527 don't crash in presenter console"



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2013-11-29 17:30:06 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1b10205c2cb952ab43e30706c05f78d6e8f642c3

Fix fdo#71527 no unguarded ptr dereference here.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Thorsten Behrens (allotropia) 2013-11-29 17:30:47 UTC
Thx Caolan for fixing it - applied a slightly different one to master, to retain the XCanvas / XBitmapCanvas disentangling. Keeping the 4.2 fix, which is just as good there.
Comment 17 Commit Notification 2013-12-02 11:27:21 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0f080297e9c176f221e20c422ba77080eee8e21c&h=libreoffice-4-2

Resolves: fdo#71527 make presenter console not crash/useless


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Jean-Baptiste Faure 2015-03-03 06:03:08 UTC
*** Bug 72236 has been marked as a duplicate of this bug. ***