Resolves: fdo#71527 don't crash in presenter console

but we're now dropping slides in there for some reason so
this is just a don't crash band-aid and not the fix
for the deeper problem

Change-Id: I2f70471d03979ffb86b6289e7a432f4505c1b556