sd/source/ui/presenter/SlideRenderer.cxx
@@ -134,9 +134,15 @@ Reference<rendering::XBitmap> SlideRenderer::createPreviewForCanvas (
     cppcanvas::BitmapCanvasSharedPtr pCanvas (cppcanvas::VCLFactory::getInstance().createCanvas(
         Reference<rendering::XBitmapCanvas>(rxCanvas, UNO_QUERY)));
     if (pCanvas.get() != NULL)
-        return cppcanvas::VCLFactory::getInstance().createBitmap(
+    {
+        cppcanvas::BitmapSharedPtr xBitmap(
+            cppcanvas::VCLFactory::getInstance().createBitmap(
             pCanvas,
-            CreatePreview(rxSlide, rMaximalSize, nSuperSampleFactor))->getUNOBitmap();
+            CreatePreview(rxSlide, rMaximalSize, nSuperSampleFactor)));
+        if (xBitmap.get() == NULL)
+            return NULL;
+        return xBitmap->getUNOBitmap();
+    }
     else
         return NULL;
 }
